--- a/views/cats/new.html.erb
+++ b/views/cats/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Report Your Cat</h1>
+<h1 class = new_cat>Report Your Cat</h1>
 
 <%= render 'shared/errors' %>
 <%= render 'form', cat: @cat %>
