--- a/views/cats/_form.html.erb
+++ b/views/cats/_form.html.erb
@@ -1,24 +1,32 @@
 <% action = (cat.persisted? ? cat_url(cat) : cats_url) %>
 <% method = (cat.persisted? ? :patch : :post) %>
 
+
+<div class="form_area">
 <form action="<%= action %>" method="post">
   <input type="hidden" name="_method" value="<%= method %>">
-
-  <label for="cat_name">Name</label>
+  <div class="form">
+  <div class="space">
+  <label for="cat_name" class = cat_name>Name</label>
   <input
     type="text"
     name="cat[name]"
     id="cat_name"
     value="<%= cat.name %>">
+    </div>
 
-  <label for="cat_birth_date">Birth date</label>
+  <div class="space">
+  <label for="cat_birth_date">Birth Date</label>
   <input
     type="date"
     name="cat[birth_date]"
     id="cat_birth_date"
     value="<%= cat.birth_date %>">
-  <br>
+    </div>
 
+
+
+  <div class="space">
   <label for="cat_color">Color</label>
   <select name="cat[color]" id="cat_color">
   <option disabled selected>-- select a color --</option>
@@ -30,29 +38,46 @@
       </option>
     <% end %>
   </select>
-  <br>
+  </div>
 
+
+  <div class="space">
+  <div class = gender>
+      <label for="cat_sex_male">Male</label>
   <input
     type="radio"
     name="cat[sex]"
     value="M"
     id="cat_sex_male"
     <%= cat.sex == "M" ? "checked" : "" %>>
-  <label for="cat_sex_male">Male</label>
+  
+     <label for="cat_sex_female">Female</label>
   <input
     type="radio"
     name="cat[sex]"
     value="F"
     id="cat_sex_female"
     <%= cat.sex == "F" ? "checked" : "" %>>
-  <label for="cat_sex_female">Female</label>
-  <br>
+    </div>
+    </div>
 
-  <label>
+  
+  
+
+  <div class="space">
+  <label class = crimes_label>
     Crimes
-    <textarea name="cat[description]"><%= cat.description %></textarea>
   </label>
+  <div class = crimes_box>
+    <textarea name="cat[description]"><%= cat.description %></textarea>
+  </div>
+  </div>
+  </div>
+
+
 
   <% submit_text = (cat.persisted? ? 'Update' : 'Create') + ' cat!' %>
   <input type="submit" value="<%= submit_text %>">
+  </div>
 </form>
+
